[package]
name = "piggytag"
description = "A simple CLI audio metadata editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
colored = "2.0.0"
lofty = "0.14.0"
thiserror = "1.0.40"
